# whatsapp-agent

./: .env.example  .gitignore  README.md  campaign_upload_template.csv
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  railway.json  railway.worker.json
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  analytics.py  auth.py  campaigns.py  contacts.py  inbox.py  integrations.py  kb.py  leads.py  router.py  settings.py  webhooks.py
backend/app/core/: config.py  logging.py  redis.py  security.py
backend/app/db/: base.py  session.py
backend/app/integrations/aisensy/: __init__.py  client.py  normalizer.py  schemas.py
backend/app/models/: __init__.py  agent.py  ai_run.py  audit.py  campaign.py  contact.py  conversation.py  knowledge.py  settings.py  user.py
backend/app/schemas/: agent.py  auth.py  campaign.py  common.py  contact.py  conversation.py  kb.py
backend/app/services/ai/: extractor.py  intents.py  llm.py  prompt.py  runner.py
backend/app/utils/: audit.py  csv_parser.py  pdf.py  phone.py  retries.py
backend/app/workers/: jobs.py  queue.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_lead_tracking.py
backend/scripts/: sample_campaign.csv  seed.py  start-worker.sh  start.sh
backend/tests/: test_aisensy_client_auth.py  test_chunker.py  test_csv_parser.py  test_extractor.py  test_intents.py  test_normalizer.py  test_phone.py  test_prompt.py  test_provider_response.py  test_service_window.py  test_state_machine.py
frontend/: .env.example  (+1 more)
(+37 files in other folders)
